@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.34 2005/01/15 03:38:08 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.35 2005/01/15 08:08:22 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  15 Jan 2004; Andrew Gaffney <agaffney@gentoo.org>
+  USE flag editor in MakeDotConf.py
 
   14 Jan 2005; John Laliberte <allanonl@bu.edu>
   Timezone.py - fixed bug where after selecting a timezone, it would jump
